--- a/src/main/resources/templates/app/login.html
+++ b/src/main/resources/templates/app/login.html
@@ -12,13 +12,20 @@
 <header th:replace="layout/headerTemplate"></header>
 <body>
   <div class="container">
-    <form method="post" th:action="@{/Aplicacion/login}">
-      <label for="username" class="form-label">Usuario</label>
-      <input type="text" id="username" class="form-control" placeholder="Ej. joeSmith">
-      <label for="password" class="form-label">Contraseña</label>
-      <input type="password" id="password" class="form-control" placeholder="********">
-      <button type="submit" class="btn-outline-primary">Iniciar Sesión</button>
-    </form>
+    <h1 style="text-align: center">Iniciar Sesión</h1>
+    <div class="container-fluid">
+      <div th:if="${param.error}" class="alert alert-danger alert-dismissible fade show" id="error" role="alert" hidden>
+        <strong>Usuario</strong> o <strong>contraseña</strong> están incorrectos. Verifica e intenta nuevamente
+      </div>
+      <form role="form" method="post" th:action="@{/login}" th:object="${usuario}">
+        <label for="username" class="form-label">Usuario</label>
+        <input type="text" id="username" name="username" class="form-control" placeholder="Ej. joeSmith@mail.com" th:field="${usuario.username}">
+        <label for="password" class="form-label">Contraseña</label>
+        <input type="password" id="password" name="password" class="form-control" placeholder="********" th:field="${usuario.password}">
+        <br>
+        <input type="submit" class="btn btn-outline-primary" value="Iniciar Sesión">
+      </form>
+    </div>
   </div>
 </body>
 </html>
