--- a/src/main/resources/templates/layout/loggedHeader.html
+++ b/src/main/resources/templates/layout/loggedHeader.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"
+      xmlns = "http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
@@ -16,15 +18,21 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarText">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" th:href="@{/Aplicacion/dashboard}">Dashboard</a>
+            <a class="nav-link" th:href="@{/Aplicacion/}">Dashboard</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" th:href="@{/Aplicacion/config}">Mi Cuenta</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" th:href="@{/logout}">Salir</a>
+        </ul>
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item dropdown">
+            <i class="fas fa-user">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" th:text="${usuario.nombre}">
+              </a>
+            </i>
+             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+               <a class="nav-link" th:href="@{/Aplicacion/config}">Mi Cuenta</a>
+               <a class="nav-link" th:href="@{/logout}">Salir</a>
+             </div>
           </li>
         </ul>
       </div>
