--- a/src/main/resources/templates/layout/headerTemplate.html
+++ b/src/main/resources/templates/layout/headerTemplate.html
@@ -21,10 +21,10 @@
               <a class="nav-link" th:href="@{/}">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" th:href="@{/login}">Login</a>
+              <a class="nav-link" th:href="@{/reportes}">Mostrar Reportes</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" th:href="@{/signup}">Registrarse</a>
+              <a class="nav-link" th:href="@{/cargueArchivo}">Cargue Archivo Plano</a>
             </li>
           </ul>
         </div>
